ags (0.6.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash related to XML IO of AgsFileLink
	* implemented ags-envelope recall but it's not tested, yet

ags (0.6.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed modified default thread model in ags_config.c what caused certain crashes without ECC
	* extended AgsFileLink with field audio_channel see next
	* improved link editor file chooser to let you select audio channel

ags (0.6.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_pad_play() to contain cancel code instead of playing again on toggle
	* modified default thread model in ags_config.c what caused certain crashes without ECC
	* implemented loading GTKRC from $(HOME)/.gsequencer/ags.rc

ags (0.6.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed audible feedback of note edit to play actual length of note
	* fixed not connected line member
	* fixed missing value_changed event in ags_dial.c
	* removed built-in styles

ags (0.6.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed to shrink of notes by keyboard to enable initial size
	* improved user's manual docbook XML documentation
	* implemented AtkAction interface in ags_dial.c and key-bindings

ags (0.6.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed buffer attack in ags_buffer_audio_signal_run_inter()
	* fixed NULL link within link editor to be shown correctly
	* fixed playback of linked input
	* implemented file link in link editor
	* implemented audible feedback of AgsPatternBox, AgsCellPattern, AgsPatternEdit and AgsNoteEdit

ags (0.6.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash while clicking AgsPatternBox pad
	* fixed toggling all selected pads of AgsPatternBox pattern
	* enhanced prelight of focused AgsPatternBox pad

ags (0.6.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]